tweaks: added vertical scroll bar if canvas is too big, some other little issues

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ button:active{
 
 section{
 	overflow: hidden;
+	overflow-y: auto;
 	height: 85%;
 	width: 100%;
 }
@@ -226,7 +227,7 @@ footer{
 	background: rgb(13, 189, 13);
 	width: 250px;
 	margin-top: 100px;
-	position: relative;
+	position: fixed;
 	left:0;
 
 	transition: all .5s ease-in-out; 
@@ -330,29 +331,22 @@ ul > li:first-child{ border-top: 5px solid #24700C; }
 
 #draw-board{
 	position: relative;
-	float: left;
+	float: right;
 	top:100px;
-	
 	width: calc(100% - 250px);
-	height: 100%;
-
 }
 
 #canvas{
 	background: white;
-	border-top: 5px solid #24700C;
 	margin:0 auto; 
-	/* height: 100%;
-	width: 100%;  */
 	position: absolute;
 	left:0;
 	right:0; 
 }
 
 .canvas-container{
+	border-top: 5px solid #24700C;
 	margin:0 auto;
-	/* height: 80%;
-	 width: 80%; */ 
 	position: absolute;
 	left:0;
 	right:0;
